testing/macro-tests/tests/ui/pk_fields_composite_unit.stderr
error: primary key field 'singleton' cannot use Unit inside a composite primary key
  --> tests/ui/pk_fields_composite_unit.rs:18:1
   |
18 | / #[entity(
19 | |     store = "UiDataStore",
20 | |     version = 1,
21 | |     pk(fields = ["tenant_id", "singleton"]),
...  |
26 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `entity` (in Nightly builds, run with -Z macro-backtrace for more info)
